--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-spring/three": "9.1.1",
     "@react-three/drei": "4.1.8",
     "@react-three/fiber": "6.0.16",
+    "locomotive-scroll": "^4.1.1",
     "mobx": "^6.3.1",
     "mobx-react-lite": "^3.2.0",
     "node-sass": "^6.0.0",
@@ -22,6 +23,7 @@
     "react-dom": "17.0.2",
     "react-responsive": "^8.2.0",
     "react-scripts": "4.0.3",
+    "sass": "^1.37.5",
     "three": "0.127.0"
   },
   "devDependencies": {
