--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "17.0.2",
     "react-responsive": "^8.2.0",
     "react-scripts": "4.0.3",
+    "rellax": "^1.12.1",
     "sass": "^1.37.5",
     "three": "0.127.0"
   },
