--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mobx": "^6.3.1",
     "mobx-react-lite": "^3.2.0",
     "node-sass": "^6.0.0",
+    "random-words": "^1.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-responsive": "^8.2.0",
@@ -28,6 +29,8 @@
     "three": "0.127.0"
   },
   "devDependencies": {
+    "@types/random-words": "^1.1.2",
+    "@types/react": "^17.0.17",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "vite": "^2.3.5"
   }
