--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-responsive": "^8.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "rellax": "^1.12.1",
     "sass": "^1.37.5",
     "three": "0.127.0"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.1",
     "@types/random-words": "^1.1.2",
     "@types/react": "^17.0.17",
+    "@types/react-router-dom": "^5.1.8",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "vite": "^2.3.5"
   }
